--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex,nofollow" />
-    <title>蘵感ZanGan</title>
+    <title>aaa蘵感ZanGan</title>
     <link rel="stylesheet" href="style.css">
     <!-- <script src="Javascript.js"></script> -->
 
@@ -50,17 +50,18 @@
                     <a href="signup.html">
                         <h3>快速報名</h3>
                     </a>
-                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                    <span class="space"><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
                 </li>
-                <li>
-                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
+                <li class="login_box">
+                    <span class="login"><img src="img/index/index-topbar/user.svg" width="20" height="20"
+                            alt="登入"></span>
                     <span><a href="login.html">
                             <h3>登入</h3>
                         </a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
+                        <span class="carticon"><img src="img/index/index-topbar/cart.svg" alt="購物車"></span>
                     </a>
                 </li>
             </ul>
@@ -123,17 +124,18 @@
                     <a href="signup.html">
                         <h3>快速報名</h3>
                     </a>
-                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                    <span class="space"><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
                 </li>
-                <li>
-                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
+                <li class="login_box">
+                    <span class="login"><img src="img/index/index-topbar/user.svg" width="20" height="20"
+                            alt="登入"></span>
                     <span><a href="login.html">
                             <h3>登入</h3>
                         </a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
+                        <span class="carticon"><img src="img/index/index-topbar/cart.svg" alt="購物車"></span>
                     </a>
                 </li>
             </ul>
@@ -145,20 +147,21 @@
         <div class="about_nav">
             <span class="about_section">
                 <div class="about_block">
-                    <h3 class="e">ABOUT</h3>
-                    <hr>
-                    <h1 class="t">成為你生活中的「蘵感」</h1>
-                    <p class="p"> 「蘵感」是一個專注於美學生活手作的品牌。<br>
-                        我們相信手作藝術可以讓人們從日常瑣事中解放出來，並在創作中找到心靈的寧 <br>
-                        靜。我們的課程涵蓋了各種不同的手作技能，讓您可以從中發現自己喜愛的「蘵<br>感」風格，並將其融入到自己的生活中。<br>
-                    </p>
-                    <div class="more">
-                        <a href="about.html">查看更多</a>
-                        <img src="img/index/index-about/arrow(黑).svg" alt="">
+                    <div class="textarea">
+                        <h3>ABOUT</h3>
+                        <hr>
+                        <h1>成為你生活中的「蘵感」</h1>
+                        <p> 「蘵感」是一個專注於美學生活手作的品牌。<br>
+                            我們相信手作藝術可以讓人們從日常瑣事中解放出來，並在創作中找到心靈的寧 <br>
+                            靜。我們的課程涵蓋了各種不同的手作技能，讓您可以從中發現自己喜愛的「蘵<br>感」風格，並將其融入到自己的生活中。<br>
+                        </p>
+                        <div class="more">
+                            <a href="about.html">查看更多</a>
+                            <img src="img/index/index-about/arrow(黑).svg" alt="">
+                        </div>
                     </div>
-                    <!-- test -->
                     <div class="bg_logo">
-                        <img src="img/index/index-about/EN-logo.svg" alt="">
+                        <img src="img/index/index-about/EN-logo.svg" width="90%" alt="">
                     </div>
                 </div>
             </span>
@@ -302,97 +305,95 @@
                 </div>
             </li>
         </ul>
+        <div class="bglogo">
+            <img src="img/index/index-teachers/logo(棕色).svg" alt="">
+        </div>
     </div>
 
     <!-- 5.teachers -->
     <div id="teachers">
-        <div class="a">
-            <div class="n">
-                <h3>TEACHERS</h3>
-                <h1>蘵感 <pr>專業師資 </h1>
-                <div class="hr"></div>
-            </div>
-            <div class="b">
-                <img src="img/index/index-teachers/logo(棕色).svg" alt="">
-            </div>
-            <ul>
-                <!--師資Jaclyn Wu  -->
-                <li>
-                    <div class="teachers_box">
-                        <div class="teachers_name">
-                            <h2>Jaclyn Wu</h2>
-                        </div>
-                        <div>
+        <div class="nav">
+            <h3>TEACHERS</h3>
+            <h1>蘵感 <pr>專業師資 </h1>
+            <hr>
+        </div>
+        <ul>
+            <!--師資Jaclyn Wu  -->
+            <li>
+                <div class="teachers_box">
+                    <div>
+                        <h2>Jaclyn Wu</h2>
+                        <div class="people pos">
                             <img src="img/index/index-teachers/師資Wu.png" alt="">
                         </div>
-                        <div class="teachers_good">
-                            <h4 class="teachers_college">英國普頓大學花藝系所碩士 </h4>
-                            <h4 class="teachers_best">擅長法式層次、自然風格盆花</h4>
-                        </div>
                     </div>
-                </li>
-                <!--師資Tomoko Liu  -->
-                <li>
-                    <div class="teachers_box">
-                        <div class="teachers_name">
-                            <h2>Tomoko Liu</h2>
-                        </div>
-                        <div>
+                    <div class="teachers_good">
+                        <h4 class="teachers_college">英國普頓大學花藝系所碩士 </h4>
+                        <h4 class="teachers_best">擅長法式層次、自然風格盆花</h4>
+                    </div>
+                </div>
+            </li>
+            <!--師資Tomoko Liu  -->
+            <li>
+                <div class="teachers_box">
+                    <div>
+                        <h2>Tomoko Liu</h2>
+                        <div class="people pos ">
                             <img src="img/index/index-teachers/師資Liu.png" alt="">
                         </div>
-                        <div class="teachers_good">
-                            <h4 class="teachers_college">德國包浩斯材質創新學士 </h4>
-                            <h4 class="teachers_best">異材質飾品品創作專業</h4>
-                        </div>
                     </div>
-                </li>
-                <!--師資Peter  Chen  -->
-                <li>
-                    <div class="teachers_box">
-                        <div class="teachers_name">
-                            <h2>Peter Chen</h2>
-                        </div>
-                        <div>
+                    <div class="teachers_good">
+                        <h4 class="teachers_college">德國包浩斯材質創新學士 </h4>
+                        <h4 class="teachers_best another">異材質飾品品創作專業</h4>
+                    </div>
+                </div>
+            </li>
+            <!--師資Peter  Chen  -->
+            <li>
+                <div class="teachers_box">
+                    <div>
+                        <h2>Peter Chen</h2>
+                        <div class="people pos">
                             <img src="img/index/index-teachers/師資Chen.png" alt="">
                         </div>
-                        <div class="teachers_good">
-                            <h4 class="teachers_college">加拿大多倫多大學設計學士 </h4>
-                            <h4 class="teachers_best">現代風格，擅長融合材料和色彩</h4>
-                        </div>
                     </div>
-                </li>
-                <!--師資Ablega Hang  -->
-                <li>
-                    <div class="teachers_box">
-                        <div class="teachers_name">
-                            <h2>Ablega Hang</h2>
-                        </div>
-                        <div>
+                    <div class="teachers_good">
+                        <h4 class="teachers_college">加拿大多倫多大學設計學士 </h4>
+                        <h4 class="teachers_best another_chen">現代風格，擅長融合材料和色彩</h4>
+                    </div>
+                </div>
+            </li>
+            <!--師資Ablega Hang  -->
+            <li>
+                <div class="teachers_box">
+                    <div>
+                        <h2>Ablega Hang</h2>
+                        <div class="people pos">
                             <img src="img/index/index-teachers/師資Hang.png" alt="">
                         </div>
-                        <div class="teachers_good">
-                            <h4 class="teachers_college">日本新宿調理師專門學校 </h4>
-                            <h4 class="teachers_best">擅長日是糕點和菓子專業</h4>
-                        </div>
                     </div>
-                </li>
-                <!--師資Ruta Rio  -->
-                <li>
-                    <div class="teachers_box">
-                        <div class="teachers_name">
-                            <h2>Ruta Rio</h2>
-                        </div>
-                        <div>
+                    <div class="teachers_good">
+                        <h4 class="teachers_college">日本新宿調理師專門學校 </h4>
+                        <h4 class="teachers_best another_hang">擅長日是糕點和菓子專業</h4>
+                    </div>
+                </div>
+            </li>
+            <!--師資Ruta Rio  -->
+            <li>
+                <div class="teachers_box">
+                    <div>
+                        <h2>Ruta Rio</h2>
+                        <div class="people pos">
                             <img src="img/index/index-teachers/師資Rio.png" alt="">
                         </div>
-                        <div class="teachers_good">
-                            <h4 class="teachers_college">日本東京大學茶道研究所碩士 </h4>
-                            <h4 class="teachers_best">擅長教授茶道禮儀及藝術技巧</h4>
-                        </div>
                     </div>
-                </li>
-            </ul>
-        </div>
+                    <div class="teachers_good">
+                        <h4 class="teachers_college">日本東京大學茶道研究所碩士 </h4>
+                        <h4 class="teachers_best">擅長教授茶道禮儀及藝術技巧</h4>
+                    </div>
+                </div>
+            </li>
+        </ul>
     </div>
 
     <!-- 6.news  -->
@@ -402,11 +403,10 @@
         </div>
         <nav class="uu">
             <div class="nav">
-                <div>
+                <span>
                     <h3>NEWS</h3>
                     <h1>最新消息</h1>
-                    <hr>
-                </div>
+                </span>
                 <div class="more">
                     <a href="news.html">查看更多</a>
                     <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
@@ -414,6 +414,7 @@
             </div>
             <td>
                 <!-- 11月美學... -->
+                <hr>
                 <div class="box1">
                     <div class="pp">
                         <h3>2023.1.16</h3>
@@ -482,7 +483,7 @@
                 </a>
                 <hr>
             </div>
-            <img src="img/index/index-about/EN-logo.svg" alt="">
+            <img class="logobg" src="img/index/index-about/EN-logo.svg" alt="">
         </div>
         <!-- 內容大區塊 -->
         <div class="main">
@@ -490,97 +491,83 @@
             <div>
                 <ul>
                     <!-- first row第一列 -->
-                    <div class="media_section">
-                        <li>
-                            <h3>2023.1.16</h3>
-                            <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學習吧！</h2>
-                            <span><img src="img/index/index-media/media1.png" alt=""></span>
-                            <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
-                            <div class="more">
-                                <a href="media_page_nov.html">閱讀更多</a>
-                                <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
-                            </div>
-                        </li>
-                    </div>
+                    <li>
+                        <h3>2023.1.16</h3>
+                        <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分<br> 享插花技巧，快來一起學習吧！</h2>
+                        <span class="img"><img src="img/index/index-media/media1.png" alt=""></span>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                        <div class="more">
+                            <a href="media_page_nov.html">閱讀更多</a>
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
+                        </div>
+                    </li>
                     <!-- second row第二列 -->
-                    <div class="media_section">
-                        <li>
-                            <h3>2023.1.16</h3>
-                            <h2>【蘵感花藝學院】給新手的插花先行課，選擇最適合的花藝風格！</h2>
-                            <span><img src="img/index/index-media/media3.png" alt=""></span>
-                            <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
-                            <div class="more">
-                                <a href="media.html">閱讀更多</a>
-                                <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
-                            </div>
-                        </li>
-                    </div>
+                    <li>
+                        <h3>2023.1.16</h3>
+                        <h2>【蘵感花藝學院】給新手的插花先行課，選擇最<br>適合的花藝風格！</h2>
+                        <span class="img"><img src="img/index/index-media/media3.png" alt=""></span>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                        <div class="more">
+                            <a href="media.html">閱讀更多</a>
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
+                        </div>
+                    </li>
                 </ul>
             </div>
             <!-- second col第二欄  -->
             <ul>
                 <!-- first row第一列 -->
-                <div class="media_section">
-                    <li>
-                        <h3>2023.1.16</h3>
-                        <h2>【2023最新】手作愛好者必看！五大手作種類與課程介紹</h2>
-                        <span><img src="img/index/index-media/media2.png" alt=""></span>
-                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
-                        <div class="more">
-                            <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
-                        </div>
-                    </li>
-                </div>
+                <li>
+                    <h3>2023.1.16</h3>
+                    <h2>【2023最新】手作愛好者必看！五大手作種類與<br>課程介紹</h2>
+                    <span class="img"><img src="img/index/index-media/media2.png" alt=""></span>
+                    <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知<br>道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                    <div class="more">
+                        <a href="media.html">閱讀更多</a>
+                        <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
+                    </div>
+                </li>
                 <!-- second row第二列 -->
-                <div class="media_section">
-                    <li>
-                        <h3>2023.1.16</h3>
-                        <h2>無法出國，好想穿和服吃日式糕點！ 在家如何製作日式點心！</h2>
-                        <span><img src="img/index/index-media/media4.png" alt=""></span>
-                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
-                        <div class="more">
-                            <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
-                        </div>
-                    </li>
-                </div>
+                <li>
+                    <h3>2023.1.16</h3>
+                    <h2>無法出國，好想穿和服吃日式糕點！ 在家如何製<br>作日式點心！</h2>
+                    <span class="img"><img src="img/index/index-media/media4.png" alt=""></span>
+                    <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                    <div class="more">
+                        <a href="media.html">閱讀更多</a>
+                        <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
+                    </div>
+                </li>
             </ul>
             <!-- third col第三欄  -->
             <ul>
                 <!-- first row第一列 -->
-                <!-- section內容 -->
-                <div class="media_section">
-                    <li>
-                        <h3>2023.1.16</h3>
-                        <h2>【好評回饋】感謝報導，蘵感工作室提供生活新型型態的體驗活動！</h2>
-                        <span><img src="img/index/index-media/media6.png" alt=""></span>
-                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
-                        <div class="more">
-                            <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
-                        </div>
-                    </li>
-                </div>
+                <li>
+                    <h3>2023.1.16</h3>
+                    <h2>【好評回饋】感謝報導，蘵感工作室提供生活新<br>型型態的體驗活動！</h2>
+                    <span class="img"><img src="img/index/index-media/media6.png" alt=""></span>
+                    <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                    <div class="more">
+                        <a href="media.html">閱讀更多</a>
+                        <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
+                    </div>
+                </li>
+                <!-- </div> -->
                 <!-- second row第二列 -->
-                <div class="media_section">
-                    <li>
-                        <h3>2023.1.16</h3>
-                        <h2>【好評回饋】，知名網紅兩孩子的媽Dolly一日體驗</h2>
-                        <span><img src="img/index/index-media/media5.png" alt=""></span>
-                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
-                        <div class="more">
-                            <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
-                        </div>
-                    </li>
-                </div>
+                <li>
+                    <h3>2023.1.16</h3>
+                    <h2>【好評回饋】，知名網紅兩孩子的媽Dolly一日<br>驗體</h2>
+                    <span class="img"><img src="img/index/index-media/media5.png" alt=""></span>
+                    <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</h3>
+                    <div class="more">
+                        <a href="media.html">閱讀更多</a>
+                        <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
 
-
-    <!-- +a -->
     <!-- 8.footer -->
     <div id="footer">
         <div class="footer_ul">
