--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex,nofollow" />
-    <title>aaa蘵感ZanGan</title>
+    <title>蘵感ZanGan</title>
     <link rel="stylesheet" href="style.css">
     <!-- <script src="Javascript.js"></script> -->
 
 </head>
 
 <body>
-    <!-- 1.1topbar white 精簡+100%-->
+    <!-- topbar white 精簡+100%-->
     <div id="topbarw">
         <nav>
             <ul class="menu">
@@ -95,7 +95,7 @@
         </div>
     </main>
 
-    <!-- 1.2topbar green 精簡+100%-->
+    <!-- topbar green 精簡+100%-->
     <div id="topbar">
         <nav>
             <ul class="menu">
