--- a/蘵感ZanGan上傳/news_page_nov.html
+++ b/蘵感ZanGan上傳/news_page_nov.html
@@ -8,19 +8,28 @@
     <meta name="robots" content="noindex,nofollow" />
     <title>[活動快訊] 11月美學下午茶報名開始了～</title>
     <link rel="stylesheet" href="pages.css">
+    <link rel="stylesheet" href="breadcrumb.css">
     <script src="script.js"></script>
 
 </head>
 
 <body>
-    <!-- 1.2topbar green 精簡+100%-->
+    <!-- topbar green 精簡+100%-->
     <div id="topbar">
         <nav>
             <ul class="menu">
-                <li><a href="about.html"><h3>關於蘵感</h3></a></li>
-                <li><a href="news.html"><h3>最新消息</h3></a></li>
-                <li><a href="course.html"><h3>課程介紹</h3></a></li>
-                <li><a href="media.html"><h3>蘵感文章</h3></a></li>
+                <li><a href="about.html">
+                        <h3>關於蘵感</h3>
+                    </a></li>
+                <li><a href="news.html">
+                        <h3>最新消息</h3>
+                    </a></li>
+                <li><a href="course.html">
+                        <h3>課程介紹</h3>
+                    </a></li>
+                <li><a href="media.html">
+                        <h3>蘵感文章</h3>
+                    </a></li>
             </ul>
         </nav>
         <h1 class="logo">
@@ -31,16 +40,21 @@
         <nav>
             <ul class="icon">
                 <li class="signup">
-                    <a href="signup.html"><h3>快速報名</h3></a>
-                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                    <a href="signup.html">
+                        <h3>快速報名</h3>
+                    </a>
+                    <span class="space"><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
                 </li>
-                <li>
-                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html"><h3>登入</h3></a></span>
+                <li class="login_box">
+                    <span class="login"><img src="img/index/index-topbar/user.svg" width="20" height="20"
+                            alt="登入"></span>
+                    <span><a href="login.html">
+                            <h3>登入</h3>
+                        </a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
+                        <span class="carticon"><img src="img/index/index-topbar/cart.svg" alt="購物車"></span>
                     </a>
                 </li>
             </ul>
@@ -51,8 +65,12 @@
     <div id="news_page">
         <div class="all_section">
             <!-- 麵包屑 -->
-            <div>
-                麵包屑
+            <div class="wrap">
+                <ol class="breadcrumb">
+                    <li href="#"><a class="news_box0" >首頁</a></li>
+                    <li href="#"><a class="news_box">最新消息</a></li>
+                    <li href="#"><a class="news_box2">[活動快訊] 11月美學下午茶報名開始了～</a></li>
+                </ol>
             </div>
             <!-- 內容區塊 -->
             <div class="news_page_main">
