--- a/蘵感ZanGan上傳/news_page_nov.html
+++ b/蘵感ZanGan上傳/news_page_nov.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex,nofollow" />
-    <title>[活動快訊] 11月美學下午茶報名開始了～</title>
+    <title>[活動快訊]11月美學下午茶報名開始了～</title>
     <link rel="stylesheet" href="pages.css">
     <link rel="stylesheet" href="breadcrumb.css">
     <script src="script.js"></script>
@@ -67,9 +67,9 @@
             <!-- 麵包屑 -->
             <div class="wrap">
                 <ol class="breadcrumb">
-                    <li href="#"><a class="news_box0" >首頁</a></li>
+                    <li href="#"><a class="news_box0">首頁</a></li>
                     <li href="#"><a class="news_box">最新消息</a></li>
-                    <li href="#"><a class="news_box2">[活動快訊] 11月美學下午茶報名開始了～</a></li>
+                    <li href="#"><a class="news_box2">[活動快訊]11月美學下午茶報名開始了～</a></li>
                 </ol>
             </div>
             <!-- 內容區塊 -->
@@ -78,13 +78,14 @@
                 <div class="news_page_block">
                     <!-- 日期 -->
                     <div class="date">
-                        <p> 6.16 <br> 2023 </p>
+                        <p class="day"> 6.16</p>
+                        <p> 2023 </p>
                     </div>
                     <!-- 右邊區塊 -->
                     <div class="news_page_section">
                         <!-- 標題 -->
                         <div class="news_page_title">
-                            <h1>[活動快訊] 11月美學下午茶報名開始了～</h1>
+                            <h1>[活動快訊]11月美學下午茶報名開始了～</h1>
                         </div>
                         <!-- 圖片 -->
                         <div class="news_page_img">
@@ -92,11 +93,11 @@
                         </div>
                         <!-- 文字 -->
                         <div class="news_page_text">
-                            <p>親愛的同學，質感美學工作室推出最新的聚會活動——美學下午茶！</p>
+                            <p>親愛的同學，蘵感美學工作室推出最新的聚會活動——美學下午茶！</p>
                             <p> 想要在舒適的環境下品嘗美味點心，並且結交志同道合的朋友嗎？快來參加我們的活動吧！活動當天，您可以一邊 <br>
                                 品嘗各種美味的小點心，一邊聊聊手作的經驗和技巧，也可以與其他同學交流美學方面的想法和創意。我們的導師<br>
                                 會為您提供一些手作材料，讓您可以在下午茶時間完成一個小作品。</p>
-                            <p>這個活動不只是讓您享受美食和手作，更是一個認識新朋友的好機會！我們相信這個聚會會讓您充滿能量和創造力。</p>
+                            <p>這個活動不只是讓您享受美食和手作，更是一個認識新朋友的好機會！我們相信這個聚會會讓您充滿能量和創造 <br> 力。</p>
                             <p>活動的名額有限，請盡快報名！我們期待著您的參與，一起創造美學的體驗。</p>
                         </div>
                         <!-- sign up -->
@@ -113,14 +114,13 @@
                 </div>
                 <!-- 下面區塊 -->
                 <div class="news_page_box">
-                    <!-- +++0511 -->
                     <!-- 查看上一則 -->
                     <div class="news_page_arrow">
                         <h3><a href="news.html">查看上一則</a></h3>
                         <img src="img/news/left arrow.svg" alt="">
                     </div>
                     <!-- 查看下一則 -->
-                    <div class="news_page_arrow">
+                    <div class="news_page_arrow next">
                         <h3><a href="news_page_oct.html">查看下一則</a></h3>
                         <img src="img/index/index-about/arrow(黑).svg" alt="">
                     </div>
