--- a/蘵感ZanGan上傳/news_page_flower.html
+++ b/蘵感ZanGan上傳/news_page_flower.html
@@ -6,21 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex,nofollow" />
-    <title>【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</title>
+    <title>[課程快訊]手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</title>
     <link rel="stylesheet" href="pages.css">
+    <link rel="stylesheet" href="breadcrumb.css">
     <script src="script.js"></script>
 
 </head>
 
 <body>
-    <!-- 1.2topbar green 精簡+100%-->
+    <!-- topbar green 精簡+100%-->
     <div id="topbar">
         <nav>
             <ul class="menu">
-                <li><a href="about.html"><h3>關於蘵感</h3></a></li>
-                <li><a href="news.html"><h3>最新消息</h3></a></li>
-                <li><a href="course.html"><h3>課程介紹</h3></a></li>
-                <li><a href="media.html"><h3>蘵感文章</h3></a></li>
+                <li><a href="about.html">
+                        <h3>關於蘵感</h3>
+                    </a></li>
+                <li><a href="news.html">
+                        <h3>最新消息</h3>
+                    </a></li>
+                <li><a href="course.html">
+                        <h3>課程介紹</h3>
+                    </a></li>
+                <li><a href="media.html">
+                        <h3>蘵感文章</h3>
+                    </a></li>
             </ul>
         </nav>
         <h1 class="logo">
@@ -31,28 +40,37 @@
         <nav>
             <ul class="icon">
                 <li class="signup">
-                    <a href="signup.html"><h3>快速報名</h3></a>
-                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                    <a href="signup.html">
+                        <h3>快速報名</h3>
+                    </a>
+                    <span class="space"><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
                 </li>
-                <li>
-                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html"><h3>登入</h3></a></span>
+                <li class="login_box">
+                    <span class="login"><img src="img/index/index-topbar/user.svg" width="20" height="20"
+                            alt="登入"></span>
+                    <span><a href="login.html">
+                            <h3>登入</h3>
+                        </a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
+                        <span class="carticon"><img src="img/index/index-topbar/cart.svg" alt="購物車"></span>
                     </a>
                 </li>
             </ul>
         </nav>
     </div>
-
+    
     <!-- 2.news -->
     <div id="news_page">
         <div class="all_section">
             <!-- 麵包屑 -->
-            <div>
-                麵包屑
+            <div class="wrap">
+                <ol class="breadcrumb">
+                    <li href="#"><a class="news_box0">首頁</a></li>
+                    <li href="#"><a class="news_box">最新消息</a></li>
+                    <li href="#"><a class="news_box2">[課程快訊]手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</a></li>
+                </ol>
             </div>
             <!-- 內容區塊 -->
             <div class="news_page_main">
@@ -66,7 +84,7 @@
                     <div class="news_page_section">
                         <!-- 標題 -->
                         <div class="news_page_title">
-                            <h1>【課程快訊】手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</h1>
+                            <h1>[課程快訊]手作花藝課程邀請網紅講師分享插花技巧，快來一起學習吧！</h1>
                         </div>
                         <!-- 圖片 -->
                         <div class="news_page_img">
@@ -102,7 +120,7 @@
                         <img src="img/news/left arrow.svg" alt="">
                     </div>
                     <!-- 查看下一則 -->
-                    <div class="news_page_arrow">
+                    <div class="news_page_arrow next">
                         <h3><a href="news_page_stop.html">查看下一則</a></h3>
                         <img src="img/index/index-about/arrow(黑).svg" alt="">
                     </div>
