--- a/蘵感ZanGan上傳/media.html
+++ b/蘵感ZanGan上傳/media.html
@@ -10,59 +10,52 @@
 </head>
 
 <body>
-    <!-- 1.2topbar green 精簡+100%-->
-    <div id="topbar">
-        <nav>
-            <ul class="menu">
-                <li>
-                    <a href="about.html">
-                        <h3>關於蘵感</h3>
-                    </a>
-                </li>
-                <li>
-                    <a href="news.html">
-                        <h3>最新消息</h3>
-                    </a>
-                </li>
-                <li>
-                    <a href="course.html">
-                        <h3>課程介紹</h3>
-                    </a>
-                </li>
-                <li>
-                    <a href="media.html">
-                        <h3>蘵感文章</h3>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <h1 class="logo">
-            <a href="index.html">
-                <img src="img/index/index-topbar/cn-logo1.svg" alt="logo">
-            </a>
-        </h1>
-        <nav>
-            <ul class="icon">
-                <li class="signup">
-                    <a href="signup.html">
-                        <h3>快速報名</h3>
-                    </a>
-                    <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
-                </li>
-                <li>
-                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
-                    <span><a href="login.html">
-                            <h3>登入</h3>
-                        </a></span>
-                </li>
-                <li>
-                    <a href="cart.html">
-                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+   <!-- topbar green 精簡+100%-->
+   <div id="topbar">
+    <nav>
+        <ul class="menu">
+            <li><a href="about.html">
+                    <h3>關於蘵感</h3>
+                </a></li>
+            <li><a href="news.html">
+                    <h3>最新消息</h3>
+                </a></li>
+            <li><a href="course.html">
+                    <h3>課程介紹</h3>
+                </a></li>
+            <li><a href="media.html">
+                    <h3>蘵感文章</h3>
+                </a></li>
+        </ul>
+    </nav>
+    <h1 class="logo">
+        <a href="index.html">
+            <img src="img/index/index-topbar/cn-logo1.svg" alt="logo">
+        </a>
+    </h1>
+    <nav>
+        <ul class="icon">
+            <li class="signup">
+                <a href="signup.html">
+                    <h3>快速報名</h3>
+                </a>
+                <span class="space"><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
+            </li>
+            <li class="login_box">
+                <span class="login"><img src="img/index/index-topbar/user.svg" width="20" height="20"
+                        alt="登入"></span>
+                <span><a href="login.html">
+                        <h3>登入</h3>
+                    </a></span>
+            </li>
+            <li>
+                <a href="cart.html">
+                    <span class="carticon"><img src="img/index/index-topbar/cart.svg" alt="購物車"></span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</div>
 
     <!-- 2.media  -->
     <main id="media">
@@ -72,11 +65,11 @@
                 <h1>蘵感文章</h1>
                 <!-- 按鈕 a -->
                 <ul>
-                    <li><a href="">全部文章</a></li>
-                    <li><a href="">美學分享</a></li>
-                    <li><a href="">活動花絮</a></li>
-                    <li><a href="">好評分享</a></li>
-                    <li><a href="">採訪報導</a></li>
+                    <li class="subnav"><a href="">全部文章</a></li>
+                    <li class="subnav"><a href="">美學分享</a></li>
+                    <li class="subnav"><a href="">活動花絮</a></li>
+                    <li class="subnav"><a href="">好評分享</a></li>
+                    <li class="subnav"><a href="">採訪報導</a></li>
                 </ul>
             </div>
             <div class="list_block">
