--- a/蘵感ZanGan上傳/media_page_nov.html
+++ b/蘵感ZanGan上傳/media_page_nov.html
@@ -78,7 +78,8 @@
                 <div class="media_page_block">
                     <!-- 日期 -->
                     <div class="date">
-                        <p> 6.16 <br> 2023 </p>
+                        <p class="day"> 6.16</p>
+                        <p> 2023 </p>
                     </div>
                     <!-- <div class="news_page_date">
                         <img src="img/news/Secondary Headline.png" alt="">
